@@ -1,3 +1,7 @@
+2015-01-21 01:52 +0000
+- twitch: updated new vod master playlist parsing
+
+
 2014-12-18 20:36 +0000
 - twitch: updated playlist fetching
 
